[package]
name = "asgn1"
version = "0.1.0"
authors = ["Thomas Passmore <thomas@hateful.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "2.0"
smallvec = "1.6.1"
regex = "1.4.5"
lazy_static = "1.4.0"

[profile.dev]
opt-level = 3

[[bin]]
name = "parse"
path = "src/parse.rs"

[[bin]]
name = "index"
path = "src/index.rs"

[[bin]]
name = "search"
path = "src/search.rs"

